# ray-tracer-challenge

./: .gitignore  Cargo.toml  NOTES.md  README.md
examples/: spheres_reflective_world.yaml
obj_file/: Cargo.toml
obj_file/src/: lib.rs
parse_scene/: Cargo.toml
parse_scene/src/: lib.rs
ray_tracer/: Cargo.toml
ray_tracer/examples/: hexagon.rs
ray_tracer/src/: camera.rs  canvas.rs  color.rs  common.rs  error.rs  intersection.rs  intersections.rs  lib.rs  light.rs  material.rs  matrix.rs  pattern.rs  prelude.rs  ray.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  world.rs
rt_run/: Cargo.toml
rt_run/src/: main.rs
samples/: cover.yaml  ice_cream.yaml  reflective_world.yaml  spheres_reflective_world.yaml  teapot.yaml
