[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.3", features = ["rayon"] }
lazy_static = "1.4.0"
once_cell = "1.17"
parking_lot = "0.12.1"
perlin_noise = "1.0.1"
rayon = "1.7"
slotmap = "1.0"
thiserror = "1.0"
